enabled zoom on mobile, slider nav ui bug fix

--- a/src/scss/layout/carousel.scss
+++ b/src/scss/layout/carousel.scss
@@ -9,20 +9,23 @@
 }
 
 .VueCarousel-navigation {
-	position: absolute;
 	bottom: 0;
+	height: 100%;
 	left: 0;
+	pointer-events: none;
+	position: absolute;
 	width: 100%;
 	
 	button {
-		transform: none !important;
-		transition: all 0.35s ease-in;
-		opacity: 0 !important;
-		top: -291px !important;
-		width: 50px;
 		height: 0;
-		padding: 100px 0 0 !important;
+		opacity: 0 !important;
 		overflow: hidden;
+		padding: 100px 0 0 !important;
+		pointer-events: auto;
+		top: 50% !important;
+		transform: translateY(-50%) !important;
+		transition: opacity 0.35s ease-in;
+		width: 50px;
 		
 		&::before {
 			content: "";
@@ -31,7 +34,7 @@
 			left: 0;
 			width: 100px;
 			height: 100px;
-			background-color: $dark-15 !important;
+			background-color: $dark-50 !important;
 			background-repeat: no-repeat;
 			border-radius: 50px;
 		}
